examples/test/testpolicy1258.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1258
  namespace: namespace99
spec:
  podSelector:
    matchLabels:
      key25: value43
      key7: value37
      key5: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value34
      podSelector:
        matchLabels:
          key49: value16
